--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,68 @@
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
+	<style>
+		body {
+			font: 13px Helvetica, Arial;
+			margin:10px;
+		}
+
+		#messageArea {
+			display: none;
+			padding: 5px;
+		}
+		#userDb {
+			display: none;
+			padding: 5px;
+		}
+
+		#userInfo {
+			display: none;
+			padding-top: 5px;
+		}
+
+		#messageForm {
+			background: lightgray;
+			padding-left: 100px;
+			padding-top: 10px;
+			position: fixed;
+			bottom: 0;
+			width: 100%;
+		}
+
+		#messageForm input {
+			position: relative;
+			background: #FFFFFF;
+			color: black;
+			border: 0;
+			padding: 10px;
+			width: 50%;
+			margin-right: .5%;
+		}
+
+		#messageForm .messageButton {
+			color: #FFFFFF;
+			background-color: lightseagreen;
+			width: 9%;
+			border: none;
+			padding: 10px;
+			width: 100px;
+		}
+
+		#messages {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+		}
+
+		#messages li {
+			padding: 5px 10px;
+		}
+
+		#messages li:nth-child(odd) {
+			background: #eee;
+		}
+	</style>
 </head>
 <body>
     <div class="container">
