--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
 						<form id="messageForm">
 							<div class="form-group">
 								<label>Enter Message</label>
-								<input type="text" class="form-control" id="message" autofocus>
+								<input type="text" class="form-control" id="message" autofocus autocomplete="off">
 								<br/>
 								<input  type="submit" class="btn btn-primary messageButton" value="Gönder"/>
 							</div>
